Use engine where appropriate in QDeclarativeProperty

Task-number: QTBUG-14697

Change-Id: Id15def75271666699b1fe23e39991710afebff59
Reviewed-on: http://codereview.qt.nokia.com/2077
Reviewed-by: Aaron Kennedy <aaron.kennedy@nokia.com>